# models/system-info-public.ts
@@ -1,0 +1,45 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * galera
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 0.1.0
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+/**
+ *
+ * @export
+ * @interface SystemInfoPublic
+ */
+export interface SystemInfoPublic {
+  /**
+   *
+   * @type {string}
+   * @memberof SystemInfoPublic
+   */
+  operatingSystem: string;
+  /**
+   *
+   * @type {string}
+   * @memberof SystemInfoPublic
+   */
+  serverName: string;
+  /**
+   *
+   * @type {string}
+   * @memberof SystemInfoPublic
+   */
+  serverVersion: string;
+  /**
+   *
+   * @type {string}
+   * @memberof SystemInfoPublic
+   */
+  systemArchitecture: string;
+}
